--- a/HtmlTemplate/Contact.html
+++ b/HtmlTemplate/Contact.html
@@ -126,7 +126,7 @@
                         </div>
                         <div>
                             <span class="title">GİDİŞ TARİHİ</span>
-                            <input class="input fly-date" id="first-date" type="text" name="" placeholder="14 Aralık 2018, Cuma" />
+                            <input class="input fly-date" type="text" name="" placeholder="14 Aralık 2018, Cuma" />
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         </div>
                         <div>
                             <span class="title">DÖNÜŞ TARİHİ</span>
-                            <input class="input fly-date" id="second-date" type="text" name="" placeholder="17 Aralık 2018, Cuma" />
+                            <input class="input fly-date" type="text" name="" placeholder="17 Aralık 2018, Cuma" />
                         </div>
                     </div>
                 </div>
