--- a/HtmlTemplate/index.html
+++ b/HtmlTemplate/index.html
@@ -124,14 +124,14 @@
                             <div class="searchInput">
                                 <span class="icon icon-calendar"></span>
                                 <span class="title">DEPARTURE DATE</span>
-                                <input class="input fly-date" id="first-date" type="text" name="" placeholder="Select a date" />
+                                <input class="input fly-date datepicker" type="text" name="" placeholder="Select a date" />
                             </div>
                         </div>
                         <div class="col dateTwo mobileFull">
                             <div class="searchInput">
                                 <span class="icon icon-calendar"></span>
                                 <span class="title">RETURN DATE</span>
-                                <input class="input fly-date" id="second-date" type="text" name="" placeholder="Select a date" />
+                                <input class="input fly-date datepicker" type="text" name="" placeholder="Select a date" />
                             </div>
                         </div>
                         <div class="w-100"></div>
