--- a/HtmlTemplate/SearchResult.html
+++ b/HtmlTemplate/SearchResult.html
@@ -254,7 +254,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="/buying/?SearchId==0&" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <button href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
                                             </div>
                                         </div>
                                     </div>
@@ -291,7 +291,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="/buying/?SearchId==0&" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="/buying/?SearchId==0&" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
                                             </div>
                                         </div>
                                     </div>
@@ -406,7 +406,9 @@
                                             <div class="align-self-center text-right"><span class="price">2247.49 $</span> </div>
                                         </div>
                                         <div class="col d-flex">
-                                            <div class="align-self-center"><button href="/buying/" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button></div>
+                                            <div class="align-self-center">
+                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="detailRow">
@@ -453,7 +455,9 @@
                                             <div class="align-self-center text-right"><span class="price">2247.49 $</span> </div>
                                         </div>
                                         <div class="col d-flex">
-                                            <div class="align-self-center"><button href="/buying/" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button></div>
+                                            <div class="align-self-center">
+                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="detailRow">
@@ -500,7 +504,9 @@
                                             <div class="align-self-center text-right"><span class="price">2247.49 $</span> </div>
                                         </div>
                                         <div class="col d-flex">
-                                            <div class="align-self-center"><button href="/buying/" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button></div>
+                                            <div class="align-self-center">
+                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="detailRow">
@@ -628,8 +634,6 @@
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.12/vue.min.js" integrity="sha512-BKbSR+cfyxLdMAsE0naLReFSLg8/pjbgfxHh/k/kUC82Hy7r6HtR5hLhobaln2gcTvzkyyehrdREdjpsQwy2Jw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
