--- a/HtmlTemplate/SearchResult.html
+++ b/HtmlTemplate/SearchResult.html
@@ -254,7 +254,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="/loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -291,7 +291,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                                         </div>
                                         <div class="col-2 d-flex">
                                             <div class="align-self-center">
-                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -407,7 +407,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -456,7 +456,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
@@ -505,7 +505,7 @@
                                         </div>
                                         <div class="col d-flex">
                                             <div class="align-self-center">
-                                                <button href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</button>
+                                                <a href="loading.html?redirect=/Buying.html" class="chooseBtn btn"><i aria-hidden="true" class="fa fa-circle-o"></i>SELECT</a>
                                             </div>
                                         </div>
                                     </div>
